@@ -1,11 +1,15 @@
 package de.agrirouter.middleware.business.listener;
 
+import agrirouter.cloud.registration.CloudVirtualizedAppRegistration;
+import com.dke.data.agrirouter.api.dto.messaging.FetchMessageResponse;
 import com.dke.data.agrirouter.api.dto.onboard.OnboardingResponse;
 import com.dke.data.agrirouter.api.enums.SystemMessageType;
+import com.dke.data.agrirouter.api.service.messaging.encoding.DecodeMessageService;
 import com.dke.data.agrirouter.api.service.parameters.CloudOffboardingParameters;
 import com.dke.data.agrirouter.convenience.decode.DecodeCloudOnboardingResponsesService;
 import com.dke.data.agrirouter.impl.messaging.mqtt.CloudOffboardingServiceImpl;
 import com.google.gson.Gson;
+import com.google.protobuf.InvalidProtocolBufferException;
 import de.agrirouter.middleware.api.errorhandling.error.ErrorMessageFactory;
 import de.agrirouter.middleware.api.events.CloudRegistrationEvent;
 import de.agrirouter.middleware.api.events.EndpointStatusUpdateEvent;
@@ -13,6 +17,7 @@ import de.agrirouter.middleware.api.logging.BusinessOperationLogService;
 import de.agrirouter.middleware.api.logging.EndpointLogInformation;
 import de.agrirouter.middleware.business.DeviceDescriptionService;
 import de.agrirouter.middleware.business.EndpointService;
+import de.agrirouter.middleware.business.cache.cloud.CloudOnboardingFailureCache;
 import de.agrirouter.middleware.domain.Endpoint;
 import de.agrirouter.middleware.domain.enums.EndpointType;
 import de.agrirouter.middleware.integration.EndpointIntegrationService;
@@ -52,8 +57,10 @@ public class CloudRegistrationEventListener {
     private final VirtualEndpointOnboardStateContainer virtualEndpointOnboardStateContainer;
     private final ApplicationEventPublisher applicationEventPublisher;
     private final BusinessOperationLogService businessOperationLogService;
-
     private final DeviceDescriptionService deviceDescriptionService;
+    private final DecodeMessageService decodeMessageService;
+
+    private final CloudOnboardingFailureCache cloudOnboardingFailureCache;
 
     public CloudRegistrationEventListener(ApplicationRepository applicationRepository,
                                           EndpointRepository endpointRepository,
@@ -65,7 +72,9 @@ public class CloudRegistrationEventListener {
                                           VirtualEndpointOnboardStateContainer virtualEndpointOnboardStateContainer,
                                           ApplicationEventPublisher applicationEventPublisher,
                                           BusinessOperationLogService businessOperationLogService,
-                                          DeviceDescriptionService deviceDescriptionService) {
+                                          DeviceDescriptionService deviceDescriptionService,
+                                          DecodeMessageService decodeMessageService,
+                                          CloudOnboardingFailureCache cloudOnboardingFailureCache) {
         this.applicationRepository = applicationRepository;
         this.endpointRepository = endpointRepository;
         this.endpointIntegrationService = endpointIntegrationService;
@@ -77,6 +86,8 @@ public class CloudRegistrationEventListener {
         this.applicationEventPublisher = applicationEventPublisher;
         this.businessOperationLogService = businessOperationLogService;
         this.deviceDescriptionService = deviceDescriptionService;
+        this.decodeMessageService = decodeMessageService;
+        this.cloudOnboardingFailureCache = cloudOnboardingFailureCache;
     }
 
     /**
@@ -85,8 +96,8 @@ public class CloudRegistrationEventListener {
      * @param virtualOffboardProcessIntegrationParameters The parameters for the offboard process.
      */
     private void offboard(VirtualOffboardProcessIntegrationParameters virtualOffboardProcessIntegrationParameters) {
-        virtualOffboardProcessIntegrationParameters.getEndpointIds().forEach(this::checkWhetherTheEndpointIsVirtualOrNot);
-        final var endpoint = virtualOffboardProcessIntegrationParameters.getEndpoint();
+        virtualOffboardProcessIntegrationParameters.virtualEndpointIds().forEach(this::checkWhetherTheEndpointIsVirtualOrNot);
+        final var endpoint = virtualOffboardProcessIntegrationParameters.parentEndpoint();
         final var onboardingResponse = endpoint.asOnboardingResponse();
         final var iMqttClient = mqttClientManagementService.get(onboardingResponse);
         if (iMqttClient.isEmpty()) {
@@ -107,17 +118,17 @@ public class CloudRegistrationEventListener {
             messageWaitingForAcknowledgement.setTechnicalMessageType(SystemMessageType.DKE_CLOUD_OFFBOARD_ENDPOINTS.getKey());
             messageWaitingForAcknowledgementService.save(messageWaitingForAcknowledgement);
 
-            virtualOffboardProcessIntegrationParameters.getEndpointIds().forEach(endpointService::deleteEndpointData);
+            virtualOffboardProcessIntegrationParameters.virtualEndpointIds().forEach(endpointService::deleteEndpointData);
         }
     }
 
     private List<String> getEndpointIds(VirtualOffboardProcessIntegrationParameters virtualOffboardProcessIntegrationParameters) {
         final var agrirouterEndpointIds = new ArrayList<String>();
-        virtualOffboardProcessIntegrationParameters.getEndpointIds().forEach(s -> {
-            final var optionalEndpoint = endpointRepository.findByExternalEndpointIdAndIgnoreDisabled(s);
+        virtualOffboardProcessIntegrationParameters.virtualEndpointIds().forEach(s -> {
+            final var optionalEndpoint = endpointRepository.findByExternalEndpointIdAndIgnoreDeactivated(s);
             optionalEndpoint.ifPresent(endpoint -> agrirouterEndpointIds.add(endpoint.getAgrirouterEndpointId()));
         });
-        agrirouterEndpointIds.addAll(virtualOffboardProcessIntegrationParameters.getEndpointIds());
+        agrirouterEndpointIds.addAll(virtualOffboardProcessIntegrationParameters.virtualEndpointIds());
         return agrirouterEndpointIds;
     }
 
@@ -149,32 +160,39 @@ public class CloudRegistrationEventListener {
                 if (optionalOnboardState.isPresent()) {
                     final var onboardState = optionalOnboardState.get();
                     final var cloudOnboardResponses = decodeCloudOnboardingResponsesService.decode(Collections.singletonList(fetchMessageResponse), endpoint.asOnboardingResponse());
-                    cloudOnboardResponses.forEach(cloudOnboardResponse -> {
-                        businessOperationLogService.log(new EndpointLogInformation(endpoint.getExternalEndpointId(), endpoint.getAgrirouterEndpointId()), "Onboard process of the following virtual endpoint was successful >>> {}", cloudOnboardResponse.getSensorAlternateId());
-                        log.debug("Saving the following cloud onboard response to the database >>> {}", cloudOnboardResponse);
-                        var virtualEndpoint = new Endpoint();
-                        virtualEndpoint.setAgrirouterEndpointId(cloudOnboardResponse.getSensorAlternateId());
-                        virtualEndpoint.setExternalEndpointId(onboardState.getExternalEndpointId());
-                        virtualEndpoint.setOnboardResponse(new Gson().toJson(cloudOnboardResponse));
-                        virtualEndpoint.setOnboardResponseForRouterDevice(application.createOnboardResponseForRouterDevice(virtualEndpoint.asOnboardingResponse(true)));
-                        virtualEndpoint.setEndpointType(EndpointType.VIRTUAL);
-                        virtualEndpoint = endpointRepository.save(virtualEndpoint);
-                        endpointRepository.save(virtualEndpoint);
-                        endpoint.getConnectedVirtualEndpoints().add(virtualEndpoint);
-                        endpointRepository.save(endpoint);
-                        application.getEndpoints().add(virtualEndpoint);
-                        applicationRepository.save(application);
-                        endpointIntegrationService.sendCapabilities(application, virtualEndpoint);
-                        deviceDescriptionService.checkAndSendCachedDeviceDescription(virtualEndpoint.getExternalEndpointId());
-                        applicationEventPublisher.publishEvent(new EndpointStatusUpdateEvent(this, virtualEndpoint.getAgrirouterEndpointId(), null));
-                    });
+                    if (cloudOnboardResponses.size() > 0) {
+                        log.debug("Cloud registration was successful, create virtual endpoints.");
+                        log.trace("There are {} cloud registration responses.", cloudOnboardResponses.size());
+                        log.trace("The cloud registration responses are for the following endpoints: {}", cloudOnboardResponses.stream().map(OnboardingResponse::getSensorAlternateId).collect(Collectors.joining(", ")));
+                        cloudOnboardResponses.forEach(cloudOnboardResponse -> {
+                            businessOperationLogService.log(new EndpointLogInformation(endpoint.getExternalEndpointId(), endpoint.getAgrirouterEndpointId()), "Onboard process of the following virtual endpoint was successful >>> {}", cloudOnboardResponse.getSensorAlternateId());
+                            log.debug("Saving the following cloud onboard response to the database >>> {}", cloudOnboardResponse);
+                            var virtualEndpoint = new Endpoint();
+                            virtualEndpoint.setAgrirouterEndpointId(cloudOnboardResponse.getSensorAlternateId());
+                            virtualEndpoint.setExternalEndpointId(onboardState.externalEndpointId());
+                            virtualEndpoint.setOnboardResponse(new Gson().toJson(cloudOnboardResponse));
+                            virtualEndpoint.setOnboardResponseForRouterDevice(application.createOnboardResponseForRouterDevice(virtualEndpoint.asOnboardingResponse(true)));
+                            virtualEndpoint.setEndpointType(EndpointType.VIRTUAL);
+                            virtualEndpoint = endpointRepository.save(virtualEndpoint);
+                            endpointRepository.save(virtualEndpoint);
+                            endpoint.getConnectedVirtualEndpoints().add(virtualEndpoint);
+                            endpointRepository.save(endpoint);
+                            application.getEndpoints().add(virtualEndpoint);
+                            applicationRepository.save(application);
+                            cloudOnboardingFailureCache.clear(virtualEndpoint.getExternalEndpointId());
+                            endpointIntegrationService.sendCapabilities(application, virtualEndpoint);
+                            deviceDescriptionService.checkAndSendCachedDeviceDescription(virtualEndpoint.getExternalEndpointId());
+                            applicationEventPublisher.publishEvent(new EndpointStatusUpdateEvent(this, virtualEndpoint.getAgrirouterEndpointId(), null));
+                        });
+                    } else {
+                        log.warn("No cloud onboard response found, are there only errors during the cloud onboard process?");
+                    }
+                    handleCloudOnboardErrors(fetchMessageResponse, endpoint);
                 } else {
                     log.warn("Since the state for the message ID '{}' has not been found the endpoints are removed from the AR to avoid problems.", cloudRegistrationEvent.getApplicationMessageId());
-                    final var offboardVirtualEndpointParameters = new VirtualOffboardProcessIntegrationParameters();
-                    offboardVirtualEndpointParameters.setEndpoint(endpoint);
                     final var cloudOnboardResponses = decodeCloudOnboardingResponsesService.decode(Collections.singletonList(fetchMessageResponse), endpoint.asOnboardingResponse());
-                    final var endpointIds = cloudOnboardResponses.stream().map(OnboardingResponse::getSensorAlternateId).collect(Collectors.toList());
-                    offboardVirtualEndpointParameters.setEndpointIds(endpointIds);
+                    final var endpointIds = cloudOnboardResponses.stream().map(OnboardingResponse::getSensorAlternateId).toList();
+                    final var offboardVirtualEndpointParameters = new VirtualOffboardProcessIntegrationParameters(endpoint, endpointIds);
                     offboard(offboardVirtualEndpointParameters);
                 }
             } else {
@@ -182,6 +200,22 @@ public class CloudRegistrationEventListener {
             }
         } else {
             log.error(ErrorMessageFactory.couldNotFindEndpoint().asLogMessage());
+        }
+    }
+
+    private void handleCloudOnboardErrors(FetchMessageResponse fetchMessageResponse, Endpoint endpoint) {
+        try {
+            CloudVirtualizedAppRegistration.OnboardingResponse nativeCloudOnboardResponse = decodeCloudOnboardingResponsesService.unsafeDecode(decodeMessageService.decode(fetchMessageResponse.getCommand().getMessage()).getResponsePayloadWrapper().getDetails().getValue());
+            if (nativeCloudOnboardResponse.getFailuresCount() > 0) {
+                log.warn("There are {} failures during the cloud onboard process.", nativeCloudOnboardResponse.getFailuresCount());
+                nativeCloudOnboardResponse.getFailuresList().forEach(failure -> {
+                    businessOperationLogService.log(new EndpointLogInformation(endpoint.getExternalEndpointId(), endpoint.getAgrirouterEndpointId()), "Onboard process of the following virtual endpoint failed >>> {}", failure.getId());
+                    log.warn("The following virtual endpoint could not be onboarded >>> {}", failure.getId());
+                    cloudOnboardingFailureCache.put(endpoint.getExternalEndpointId(), failure.getId(), failure.getReason().getMessageCode(), failure.getReason().getMessage());
+                });
+            }
+        } catch (InvalidProtocolBufferException e) {
+            log.error("Could not decode the cloud onboard response.", e);
         }
     }
 }
